--- a/style/style.css
+++ b/style/style.css
@@ -73,3 +73,11 @@
     font-size: medium;
     opacity: 50%;
  }
+ .slideimg{
+  border-radius: 14px;
+  
+ }
+ .slidedown{
+  border-radius: 14px;
+  
+ }
